# asciify

./: .gitignore  README.md
core/: Cargo.toml
core/src/: core.rs  decode.rs  engine.rs  lib.rs
web/: gif-encoder.js  gif-encoder.selftest.mjs  index.html  main.js  serve.ts
