[package]
name = "asciify-core"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
thiserror = "2.0.18"
serde_json = "1.0.150"

[profile.release]
opt-level = "s"
lto = true
